<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/buttons__group__navigation_drawer"
        android:checkableBehavior="single">
        <item
            android:id="@+id/map__bottom_menu"
            android:enabled="true"
            android:icon="@drawable/ic_place_24px"
            android:title="@string/agzs_map" />
        <item
            android:id="@+id/news__bottom_menu"
            android:enabled="true"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/promotions_and_news" />
        <item
            android:id="@+id/promotions__bottom_menu"
            android:enabled="true"
            android:icon="@drawable/ic_sale"
            android:title="@string/about_promotion" />
        <item
            android:id="@+id/support__bottom_menu"
            android:enabled="true"
            android:icon="@drawable/ic_support_agent_24px"
            android:title="@string/support_center" />
        <item
            android:id="@+id/contacts__bottom_menu"
            android:enabled="true"
            android:icon="@drawable/ic_call_24px"
            android:title="@string/contacts" />
        <item
            android:id="@+id/lost_card__bottom_menu"
            android:enabled="true"
            android:icon="@drawable/ic_payment_24px"
            android:title="@string/lost_the_card" />
    </group>
</menu>