<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/vk__social_button__image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/vk_ru"
        android:focusable="true"
        app:srcCompat="@drawable/ic_icons8_vk_com" />

    <ImageView
        android:id="@+id/instagram__social_button__image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/instagram"
        android:focusable="true"
        app:srcCompat="@drawable/ic_icons8_instagram" />

    <ImageView
        android:id="@+id/facebook__social_button__image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/facebook"
        android:focusable="true"
        app:srcCompat="@drawable/ic_icons8_facebook" />

    <ImageView
        android:id="@+id/ok__social_button__image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/ok_ru"
        android:focusable="true"
        app:srcCompat="@drawable/ic_icons8_odnoklassniki" />
</LinearLayout>